# TinyPB

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  address.book.data
.circleci/: config.yml
.github/workflows/: c-cpp.yml
include/: BasicWrapper.h  Enum.h  Overloaded.h  Reflection.h  ReflectionTools.h  protobuf.h  traits.h
src/: protobuf.cpp
